tests/match_unsupported/match_unsupported.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:11

`match` expressions are not supported. [unsupported-syntax]

   1| const e = match (1) {};
                ^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

`match` statements are not supported. [unsupported-syntax]

   3| match (1) {}
      ^^^^^^^^^^^^



Found 2 errors
